[package]
name = "sargparse"
version = "0.1.0"
edition = "2021"
author = "Siddhartha Dhar Choudhury"
description = "A sane argument parsing library for Rust"
documentation = "https://github.com/frankhart2018/sargparse/blob/master/docs.md"
readme = "https://github.com/frankhart2018/sargparse/blob/master/README.md"
repository = "https://github.com/frankhart2018/sargparse/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
